really, i think i fixed it this time! No, for realgit add 404.html!

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 AHHHH!!! VAR EES???? VAR EES???? WHAT WENT WRONG? THE PAGE IS MISSING!!! AHHHHH!!!!
-Try <a href="index.html>going home</a>. That usually helps.
+Try <a href="index.html">going home</a>. That usually helps.
 Or <a href="javascript:close_window( );">leave the site</a> if you're just out of patience. All though please don't. Really. There are so many good reasons to stay.
 Have a nice day!
 -Jack
